Increase the size of the holder to fix a truncation problem on Firefox.

--- a/server/ncm/stylesheets/styles.css
+++ b/server/ncm/stylesheets/styles.css
@@ -22,7 +22,7 @@ img {
 
 #holder {
 	margin:auto;
-	width:1000px;
+	width:1040px;
 	background:white;
 	border-radius:15px;
 	-moz-border-radius:15px;
